infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grepcoin-web
  namespace: grepcoin
  labels:
    app: grepcoin
    component: web
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: grepcoin
    component: web
